--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,21 +28,18 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  amazon_cognito_identity_dart_2: ^3.3.0
   auto_size_text: ^3.0.0
   cupertino_icons: ^1.0.2
+  dio: ^5.1.2
   flutter:
     sdk: flutter
+  flutter_dotenv: ^5.0.2
   flutter_riverpod: ^2.3.6
   formz: ^0.6.0
   go_router: ^7.0.1
 
 dev_dependencies:
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
@@ -59,6 +56,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - .env
     - assets/images/
     - assets/images/logo/
   #   - images/a_dot_ham.jpeg
@@ -72,9 +70,9 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-    - family:  MyFlutterApp
+    - family: MyFlutterApp
       fonts:
-       - asset: fonts/MyFlutterApp.ttf
+        - asset: fonts/MyFlutterApp.ttf
     - family: Inter
       fonts:
         - asset: assets/fonts/Inter-Regular.ttf
