--- a/.env.template
+++ b/.env.template
@@ -3,3 +3,4 @@ CLIENT_ID = XXXXXX
 REGION = XXXXX
 STATION_API = XXXX
 HISTORICAL_DATA_API = XXXXX
+STATION_ID = bd5c8a71-037b-41ee-801f-be1ef7381eba
