--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   crypto: ^3.0.3
   cupertino_icons: ^1.0.2
   dio: ^5.1.2
+  fl_chart: ^0.63.0
   flutter:
     sdk: flutter
   flutter_dotenv: ^5.0.2
@@ -41,6 +42,8 @@ dependencies:
   formz: ^0.6.0
   go_router: ^7.0.1
   shared_preferences: ^2.1.1
+  syncfusion_flutter_charts: ^21.2.9
+  syncfusion_flutter_sliders: ^21.2.9
 
 dev_dependencies:
   flutter_lints: ^2.0.0
