--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,7 @@ dependencies:
   flutter_riverpod: ^2.3.6
   flutter_secure_storage: ^8.0.0
   formz: ^0.6.0
-  go_router: ^7.0.1
+  go_router: ^13.0.1
   shared_preferences: ^2.1.1
 
 dev_dependencies:
@@ -53,13 +53,12 @@ dev_dependencies:
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/images/logo/otrologo.jpg"
+  image_path: "assets/images/logo/station_image_background.png"
   min_sdk_android: 21 
 
 flutter_native_splash:
   color: "#0F0E1E"
-  image: "assets/images/logo/otrologo.jpg"
-  
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter packages.
